--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
 # Database Configuration
-DATABASE_URL=postgresql://postgres:postgres@192.168.50.62:5432/quickstore
+# Supabase Transaction Pooler (Recommended)
+DATABASE_URL=postgresql://postgres.mjntmxvknohuqajulgvt:[YOUR-PASSWORD]@aws-1-ap-south-1.pooler.supabase.com:6543/postgres
 
 # JWT Configuration
 SECRET_KEY=your-secret-key-change-this-in-production
@@ -8,3 +9,13 @@ ACCESS_TOKEN_EXPIRE_MINUTES=10080
 
 # CORS Origins (comma-separated)
 CORS_ORIGINS=http://localhost:5173,http://localhost:3000
+
+# Admin User Configuration (for seed_admin.py)
+ADMIN_USERNAME=admin
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=change-this-password
+
+# Company Configuration (for seed_admin.py)
+COMPANY_NAME=YourCompanyName
+COMPANY_CURRENCY=$
+COMPANY_MAX_STORES=10
